# drywall-seg

./: .gitignore  Final report.md  README.md  config.py  dataset.py  evaluate.py  predict.py  prepare_data.py  pyproject.toml  report.md  train.py  visualize.py
checkpoints/: best_model.pt
